--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-anime": "^4.0.4",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1"
