--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "7.14.0",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "ace-builds": "^1.4.12",
     "classnames": "2.3.1",
     "legendary-cursor": "^1.0.2",
     "moment": "2.29.1",
@@ -15,13 +16,15 @@
     "nouislider": "15.1.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-ace": "^9.4.0",
     "react-anime": "^4.0.4",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "react-slick": "0.28.1"
+    "react-slick": "0.28.1",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "@babel/cli": "7.13.16",
