--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-ace": "^9.4.0",
+    "react-animated-css": "^1.2.1",
     "react-anime": "^4.0.4",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
