git hub actions broken test

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,8 +2,8 @@ name: Deploy to AWS S3 (Production)
 on:
   push:
     branches:
-      master
-      develop
+      - master
+      - develop
 jobs:
   Deploy to AWS S3:
     runs-on: ubuntu-latest
