--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-kit-react",
+  "name": "beel.dev",
   "version": "1.10.0",
-  "description": "Material Kit React. Coded by Creative Tim",
+  "description": "beel.dev website and project hub",
   "private": true,
   "main": "src/index.js",
   "dependencies": {
@@ -18,7 +18,6 @@
     "react": "17.0.2",
     "react-ace": "^9.4.0",
     "react-animated-css": "^1.2.1",
-    "react-anime": "^4.0.4",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-lottie": "^1.2.3",
