Update Github Actions to allow manually initiating workflow + add linter job

--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -1,8 +1,12 @@
 name: Deploy to AWS S3 (Production)
+
 on:
   push:
     branches:
       - master
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   Deploy:
     name: Upload to Amazon S3
